# goxprint

./: .gitignore
printagent_v2/: .gitignore  EDIT.md  README.md  agent_loader.py  agent_loader.spec  build_agent_loader_exe.ps1  build_and_deploy.py  create_ftp_per_copier.py  debug_address_list.html  debug_base_js.txt  debug_confirm.html  debug_wizard_js.txt  deploy_to_vps.py  fix_models.py  list_all_copiers.py  pack_agent_core.py  printagent.spec  pyproject.toml  ricoh_address_book.py  ricoh_web.py  run_db_migration.py  scan_ricoh.py  scratch_check_agent_online.py  scratch_check_agent_sqlite.py  scratch_check_command.py  scratch_check_db.py  scratch_check_emails.py  scratch_check_ftp.py  scratch_check_lan_requests.py  scratch_check_local_pg.py  scratch_check_master.py  scratch_check_remote_api.py  scratch_check_vps_scripts.py  scratch_check_vps_service.py  scratch_db.py  scratch_deploy_templates.py  scratch_dump_all_lans.py  scratch_dump_lans_remote.py  scratch_list_printers.py  scratch_query.sql  (+17 more)
printagent_v2/agent/: config.py  main.py  web.py  web_collect.py  web_device.py  web_discovery.py  web_ftp.py  web_polling.py  web_scan.py  web_scan_address.py  web_scan_ftp.py  web_scan_helpers.py  web_scan_misc.py  web_scan_support.py  web_ui.py  web_ui_support.py
printagent_v2/backend/: admin_crm_routes.py  admin_user_routes.py  agent_routes.py  app.py  app_helpers.py  auth_routes.py  check_agent_node.py  counter_core_routes.py  device_core_routes.py  device_detail_routes.py  email_routes.py  infor_routes.py  init_db.py  lan_routes.py  models.py  polling_aux_routes.py  (+7 more)
(+70 files in other folders)
