[project]
name = "printer-agent"
version = "0.1.0"
description = "Python port of Ricoh printer monitor agent"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.1.0",
  "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "agent",
  "agent.modules",
  "agent.modules.ricoh",
  "agent.modules.toshiba",
  "agent.services",
  "agent.utils",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
